--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -3,7 +3,10 @@ name: Unit Tests
 on:
   push:
     branches:
-    - main
+      - '**'
+  pull_request:
+    branches:
+      - '**'
   workflow_dispatch:
 
 permissions: read-all
@@ -35,6 +38,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tox
+          
       - name: Run unit tests with tox
         run: |
           tox
