--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,10 @@ deps = -rrequirements.txt
         pytest-cov
 commands =
   {envpython} -m pytest --cov=core --cov-report=xml {posargs} tests/test_dbapi.py tests/test_paramstyle.py tests/test_query.py tests/test_typeconversion.py tests/test_typeobjects.py
+
+setenv =
+    NZPY_IS_REMOTE = {env:NZPY_IS_REMOTE}
+    NZPY_HOST = {env:NZPY_HOST}
+    NZPY_USER = {env:NZPY_USER}
+    NZPY_PASSWORD = {env:NZPY_PASSWORD}
+    NZPY_DATABASE = {env:NZPY_DATABASE}
