--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps = -rrequirements.txt
         pytest
         pytest-cov
 commands =
-  {envpython} -m pytest --cov=core --cov-report=xml {posargs} tests/test_dbapi.py tests/test_paramstyle.py tests/test_query.py tests/test_typeconversion.py tests/test_typeobjects.py
+  {envpython} -m pytest --cov=core --cov-report=xml {posargs} tests/test_dbapi.py 
 
 setenv =
     NZPY_IS_REMOTE = {env:NZPY_IS_REMOTE}
