--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,8 @@ commands =
   {envpython} -m pytest --cov=core --cov-report=xml {posargs} tests/test_dbapi.py 
 
 setenv =
-    NZPY_IS_REMOTE = __NZPY_IS_REMOTE__
-    NZPY_HOST = __NZPY_HOST__
-    NZPY_USER = __NZPY_USER__
-    NZPY_PASSWORD = __NZPY_PASSWORD__
-    NZPY_DATABASE = __NZPY_DATABASE__
+    NZPY_IS_REMOTE = '__NZPY_IS_REMOTE__'
+    NZPY_HOST = '__NZPY_HOST__'
+    NZPY_USER = '__NZPY_USER__'
+    NZPY_PASSWORD = '__NZPY_PASSWORD__'
+    NZPY_DATABASE = '__NZPY_DATABASE__'
