--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps = -rrequirements.txt
         pytest
         pytest-cov
 commands =
-  {envpython} -m pytest -xv --cov=core --cov-report=xml {posargs} tests/test_dbapi.py::test_parallel_queries
+  {envpython} -m pytest -xv {posargs} tests/test_dbapi.py::test_parallel_queries
 
 setenv =
     NZPY_IS_REMOTE = __NZPY_IS_REMOTE__
