--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -18,10 +18,10 @@ concurrency:
 jobs:
   unit:
     name: Unit Tests
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # This ensures it runs on an Ubuntu machine for more compatibility with libraries
 
     container:
-      image: registry.access.redhat.com/ubi8/python-39
+      image: python:3.9-slim  # Using a more stable Python 3.9-based image
       options: --user root
 
     strategy:
@@ -33,10 +33,10 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Setup Python ${{ matrix.python-version }}
+      - name: Setup Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9 
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
@@ -50,7 +50,7 @@ jobs:
           sed -i 's|__NZPY_USER__|'"${NZPY_USER}"'|g' tox.ini
           sed -i 's|__NZPY_PASSWORD__|'"${NZPY_PASSWORD}"'|g' tox.ini
           sed -i 's|__NZPY_DATABASE__|'"${NZPY_DATABASE}"'|g' tox.ini
-          cat tox.ini
+          cat tox.ini  # Output the tox.ini file to verify secrets were injected
         env:
           NZPY_IS_REMOTE: ${{ secrets.NZPY_IS_REMOTE }}
           NZPY_HOST: ${{ secrets.NZPY_HOST }}
@@ -70,4 +70,4 @@ jobs:
           sed -i 's|'"${NZPY_USER}"'|__NZPY_USER__|g' tox.ini
           sed -i 's|'"${NZPY_PASSWORD}"'|__NZPY_PASSWORD__|g' tox.ini
           sed -i 's|'"${NZPY_DATABASE}"'|__NZPY_DATABASE__|g' tox.ini
-          cat tox.ini 
+          cat tox.ini  # Output the tox.ini file after cleanup
