--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest  # This ensures it runs on an Ubuntu machine for more compatibility with libraries
 
     container:
-      image: python:3.9-slim  # Using a more stable Python 3.9-based image
+      image: registry.access.redhat.com/ubi8/python-39
       options: --user root
 
     strategy:
@@ -37,6 +37,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+        run: |
+          yum install python3.9
 
       - name: Install dependencies
         run: |
