--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -35,23 +35,9 @@ jobs:
 
       - name: Install Python 3.12, pip, and tox
         run: |
-          # Install dependencies for Python 3.12
-          sudo yum -y groupinstall "Development Tools"
-          sudo yum -y install gcc openssl-devel bzip2-devel libffi-devel zlib-devel
-
-          # Download Python 3.12 source
-          curl -O https://www.python.org/ftp/python/3.12.3/Python-3.12.3.tgz
-          tar -xzf Python-3.12.3.tgz
-          cd Python-3.12.3
-
-          # Build and install Python 3.12
-          ./configure --enable-optimizations
-          sudo make altinstall
-
-          # Upgrade pip and install tox
-          sudo /usr/local/bin/python3.12 -m ensurepip --upgrade
-          sudo /usr/local/bin/python3.12 -m pip install --upgrade pip
-          sudo /usr/local/bin/python3.12 -m pip install tox
+          yum install python3.12
+          yum install python3.12-pip
+          pip install tox
 
       - name: Inject environment variables into tox.ini
         run: |
