--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -37,7 +37,7 @@ jobs:
         run: |
           yum install python3.12 -y
           yum install python3.12-pip -y
-          pip install tox
+          pip3 install tox
 
       - name: Inject environment variables into tox.ini
         run: |
