--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -38,20 +38,31 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           pip install tox
-
-      - name: Inject environment variables into tox.ini
-        run: |
           sed -i '' 's|__NZPY_IS_REMOTE__|'"${NZPY_IS_REMOTE}"'|g' tox.ini
           sed -i '' 's|__NZPY_HOST__|'"${NZPY_HOST}"'|g' tox.ini
           sed -i '' 's|__NZPY_DATABASE__|'"${NZPY_DATABASE}"'|g' tox.ini
           cat tox.ini 
           tox
         env:
-          NZPY_IS_REMOTE: ${{ secrets.NZPY_IS_REMOTE }}
-          NZPY_HOST: ${{ secrets.NZPY_HOST }}
-          NZPY_USER: ${{ secrets.NZPY_USER }}
-          NZPY_PASSWORD: ${{ secrets.NZPY_PASSWORD }}
-          NZPY_DATABASE: ${{ secrets.NZPY_DATABASE }}
+            NZPY_IS_REMOTE: ${{ secrets.NZPY_IS_REMOTE }}
+            NZPY_HOST: ${{ secrets.NZPY_HOST }}
+            NZPY_USER: ${{ secrets.NZPY_USER }}
+            NZPY_PASSWORD: ${{ secrets.NZPY_PASSWORD }}
+            NZPY_DATABASE: ${{ secrets.NZPY_DATABASE }}
+
+      # - name: Inject environment variables into tox.ini
+      #   run: |
+      #     sed -i '' 's|__NZPY_IS_REMOTE__|'"${NZPY_IS_REMOTE}"'|g' tox.ini
+      #     sed -i '' 's|__NZPY_HOST__|'"${NZPY_HOST}"'|g' tox.ini
+      #     sed -i '' 's|__NZPY_DATABASE__|'"${NZPY_DATABASE}"'|g' tox.ini
+      #     cat tox.ini 
+      #     tox
+      #   env:
+      #     NZPY_IS_REMOTE: ${{ secrets.NZPY_IS_REMOTE }}
+      #     NZPY_HOST: ${{ secrets.NZPY_HOST }}
+      #     NZPY_USER: ${{ secrets.NZPY_USER }}
+      #     NZPY_PASSWORD: ${{ secrets.NZPY_PASSWORD }}
+      #     NZPY_DATABASE: ${{ secrets.NZPY_DATABASE }}
 
       - name: Clean up tox.ini (remove secrets)
         run: |
