--- a/.github/workflows/unit_tests_lint.yaml
+++ b/.github/workflows/unit_tests_lint.yaml
@@ -3,7 +3,10 @@ name: Unit Tests
 on:
   push:
     branches:
-    - main
+      - '**'
+  pull_request:
+    branches:
+      - '**'
   workflow_dispatch:
 
 permissions: read-all
